fix error InaccessibleObjectException