@@ -8,6 +8,7 @@ export NODE_ID=${NODE_ID}
 java -XX:+UseContainerSupport \
   -XX:MaxRAMPercentage=85.0 \
   -XX:+UnlockExperimentalVMOptions \
+  --add-opens java.base/java.lang=ALL-UNNAMED \
   -Duser.timezone=${APP_TIMEZONE} \
   -Dspring.profiles.active=prod,${spring_profiles_active} \
   -XX:+HeapDumpOnOutOfMemoryError \
